--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -132,6 +132,7 @@
         android:layout_weight="15">
 
         <Button
+            android:id="@+id/btn_register_res"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -140,6 +141,7 @@
             android:text="내부 차량">
         </Button>
         <Button
+            android:id="@+id/btn_register_vis"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
