--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
             android:layout_marginLeft="10dp">
         </EditText>
         <Button
+            android:id="@+id/btn_car_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -89,11 +90,32 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="외부 차량"
+            android:text="차주 : "
+            android:textSize="20sp"
             android:layout_marginLeft="10dp">
         </TextView>
 
+        <EditText
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_name"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="연락처 : "
+            android:textSize="20sp"
+            android:layout_marginLeft="10dp">
+        </TextView>
+
+        <EditText
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_phone"/>
+
     </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,24 +126,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="입차:2021-03-26 11:45 오전"
+            android:text="동 : "
+            android:textSize="20sp"
             android:layout_marginLeft="10dp">
         </TextView>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="5">
+        <EditText
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_dong"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="출차 예정:2021-03-26 13:45"
+            android:text="호 : "
+            android:textSize="20sp"
             android:layout_marginLeft="10dp">
         </TextView>
+
+        <EditText
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_ho"/>
 
     </LinearLayout>
 
@@ -132,22 +158,22 @@
         android:layout_weight="15">
 
         <Button
-            android:id="@+id/btn_register_res"
+            android:id="@+id/btn_register"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:text="내부 차량">
+            android:text="차량 등록">
         </Button>
         <Button
-            android:id="@+id/btn_register_vis"
+            android:id="@+id/btn_car_list"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:text="외부 차량">
+            android:text="차량 목록 조회">
         </Button>
 
     </LinearLayout>
