차량 목록 조회 기능 재추가

--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="차량 검색"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp">
