--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,8 @@
             android:layout_weight="1"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_design1"
+            android:textColor="@color/white"
             android:text="초기화">
         </Button>
         <Button
@@ -48,6 +50,8 @@
             android:onClick="onClick"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_design1"
+            android:textColor="@color/white"
             android:text="번호판 인식">
         </Button>
 
@@ -77,7 +81,9 @@
             android:onClick="onClick"
             android:text="차량 검색"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/btn_design1"
+            android:textColor="@color/white">
         </Button>
 
     </LinearLayout>
@@ -85,72 +91,91 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="5">
+        android:orientation="vertical"
+        android:layout_weight="15">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="차주 : "
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp">
-        </TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_weight="5">
 
-        <EditText
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/et_name"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="차주 : "
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp">
+            </TextView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="연락처 : "
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp">
-        </TextView>
+            <EditText
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_name"/>
 
-        <EditText
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/et_phone"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_weight="5">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="연락처 : "
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp">
+            </TextView>
+
+            <EditText
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_phone"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:layout_weight="5">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="동 : "
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp">
+            </TextView>
+
+            <EditText
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_dong"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="호 : "
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp">
+            </TextView>
+
+            <EditText
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_ho"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:layout_weight="5">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="동 : "
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp">
-        </TextView>
-
-        <EditText
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/et_dong"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="호 : "
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp">
-        </TextView>
-
-        <EditText
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/et_ho"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -163,18 +188,20 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="차량 등록">
+            android:layout_margin="15dp"
+            android:text="차량 등록"
+            android:background="@drawable/btn_design1"
+            android:textColor="@color/white">
         </Button>
         <Button
             android:id="@+id/btn_car_list"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="차량 목록 조회">
+            android:layout_margin="15dp"
+            android:text="차량 목록 조회"
+            android:background="@drawable/btn_design1"
+            android:textColor="@color/white">
         </Button>
 
     </LinearLayout>
