--- a/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/recyclerview_item.xml
@@ -7,23 +7,27 @@
 
     <TextView
         android:id="@+id/tv_car_no"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/tv_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="1"/>
 
 
