--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -37,102 +37,103 @@
         android:padding="12dp"
         android:rowCount="2">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_columnWeight="2"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_columnWeight="2"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
-        <!-- 점 -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
-            android:text="."
-            android:textStyle="bold" />
+            <!-- 점 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:text="."
+                android:textStyle="bold" />
 
-        <!-- 분류 타이틀 -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="차량번호" />
+            <!-- 분류 타이틀 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="차량번호" />
 
-        <EditText
-            android:id="@+id/edit_inquiry_car"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=" "
-            android:background="@drawable/edittext_design"
-            android:inputType="text" />
+            <EditText
+                android:id="@+id/edit_inquiry_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=" "
+                android:background="@drawable/edittext_design"
+                android:inputType="text" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <!-- 이름 -->
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_columnWeight="1"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        <!-- 이름 -->
+        <LinearLayout
+            android:id="@+id/input_inquiry_type"
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_columnWeight="1"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
-            android:text="."
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:text="."
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이름"
-            android:layout_marginRight="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이름"
+                android:layout_marginRight="10dp" />
 
-        <EditText
-            android:id="@+id/edit_inquiry_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=" "
-            android:background="@drawable/edittext_design"
-            android:inputType="text" />
+            <EditText
+                android:id="@+id/edit_inquiry_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=" "
+                android:background="@drawable/edittext_design"
+                android:inputType="text" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_columnWeight="2"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="24dp"
+            android:layout_columnWeight="2"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
-        <!-- 점 -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
-            android:text="."
-            android:textStyle="bold" />
+            <!-- 점 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:text="."
+                android:textStyle="bold" />
 
-        <!-- 분류 타이틀 -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="전화번호" />
+            <!-- 분류 타이틀 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="전화번호" />
 
-        <EditText
-            android:id="@+id/edit_inquiry_call"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=" "
-            android:background="@drawable/edittext_design"
-            android:inputType="text" />
+            <EditText
+                android:id="@+id/edit_inquiry_call"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=" "
+                android:background="@drawable/edittext_design"
+                android:inputType="text" />
 
-    </LinearLayout>
+        </LinearLayout>
 
         <!-- Button: 검색 -->
         <RelativeLayout
@@ -154,96 +155,115 @@
         </RelativeLayout>
     </GridLayout>
 
-
-
+    <!-- 테이블 섹션 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@drawable/edge_design"
+        android:orientation="vertical"
+        android:padding="1dp">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="차량 번호"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:background="@drawable/table_header_design"
-            android:padding="8dp"
-            android:gravity="center"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="차주"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:background="@drawable/table_header_design"
-            android:padding="8dp"
-            android:gravity="center"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="연락처"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:background="@drawable/table_header_design"
-            android:padding="8dp"
-            android:gravity="center"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="주소"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:background="@drawable/table_header_design"
-            android:padding="8dp"
-            android:gravity="center"/>
-
-    </LinearLayout>
-
-    <!-- 테이블 바디 -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- 컬럼 세로선 -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:text="차량 번호"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:background="@drawable/table_column_design" />
-
+                android:background="@drawable/table_header_design"
+                android:padding="8dp"
+                android:gravity="center"/>
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:text="차주"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:background="@drawable/table_column_design" />
-
+                android:background="@drawable/table_header_design"
+                android:padding="8dp"
+                android:gravity="center"/>
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:text="연락처"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:background="@drawable/table_column_design" />
-
+                android:background="@drawable/table_header_design"
+                android:padding="8dp"
+                android:gravity="center"/>
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:text="주소"
+                android:textStyle="bold"
                 android:layout_weight="1"
-                android:background="@drawable/table_column_design" />
+                android:background="@drawable/table_header_design"
+                android:padding="8dp"
+                android:gravity="center"/>
 
         </LinearLayout>
-        <!-- 끝 : 컬럼 세로선 -->
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!-- 테이블 바디 -->
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="280dp"
-            android:id="@+id/res_recycler"/>
+            android:layout_height="wrap_content">
 
-    </FrameLayout>
-    <!-- 끝 : 테이블 바디 -->
+            <!-- 컬럼 세로선 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/table_column_design" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/table_column_design" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/table_column_design" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/table_column_design" />
+
+            </LinearLayout>
+            <!-- 끝 : 컬럼 세로선 -->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:id="@+id/res_recycler"/>
+
+        </FrameLayout>
+        <!-- 끝 : 테이블 바디 -->
+
+    </LinearLayout>
+
+
+
+    <!-- Button : 더보기 -->
+    <Button
+        android:id="@+id/btn_more_table"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="4dp"
+        android:text="더보기" />
 
 </LinearLayout>
