--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -8,25 +8,34 @@
     tools:context=".CarListActivity">
 
     <!-- Header 섹션 -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edge_design"
+        android:orientation="horizontal"
         android:padding="4dp">
 
         <!-- TextView: 목록 -->
         <TextView
+            android:id="@+id/mok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:background="@color/gray"
             android:padding="10dp"
             android:text="목록"
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true" />
 
-    </RelativeLayout>
+        <!-- TextView: 목록 -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="내부차량"
+            android:textColor="@color/blue"
+            android:layout_alignParentLeft="true" />
+
+    </LinearLayout>
     <!-- 끝 : Header 섹션 -->
     <!-- 분류 및 검색 섹션 -->
     <GridLayout
