--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_weight="10"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:weightSum="3">
 
         <EditText
@@ -73,18 +73,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp">
         </EditText>
-        <Button
-            android:id="@+id/btn_car_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onClick"
-            android:text="차량 검색"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/btn_design1"
-            android:textColor="@color/white">
-        </Button>
+
 
     </LinearLayout>
 
