--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_car_list.xml
@@ -16,24 +16,28 @@
         android:padding="4dp">
 
         <!-- TextView: 목록 -->
-        <TextView
-            android:id="@+id/mok"
+        <Button
+            android:onClick="onClick"
+            android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/gray"
             android:padding="10dp"
-            android:text="목록"
+            android:text="등록"
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true" />
 
         <!-- TextView: 목록 -->
-        <TextView
+        <Button
+            android:onClick="onClick"
+            android:id="@+id/btn_vis_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="내부차량"
+            android:text="외부차량"
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true" />
+
+
 
     </LinearLayout>
     <!-- 끝 : Header 섹션 -->
@@ -268,6 +272,7 @@
 
     <!-- Button : 더보기 -->
     <Button
+        android:onClick="onClick"
         android:id="@+id/btn_more_table"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
