--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_vis__car_list.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_vis__car_list.xml
@@ -16,22 +16,24 @@
         android:padding="4dp">
 
         <!-- TextView: 목록 -->
-        <TextView
-            android:id="@+id/mok"
+        <Button
+            android:onClick="onClick"
+            android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/gray"
             android:padding="10dp"
-            android:text="목록"
+            android:text="등록"
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true" />
 
         <!-- TextView: 목록 -->
-        <TextView
+        <Button
+            android:onClick="onClick"
+            android:id="@+id/btn_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="외부차량"
+            android:text="내부차량"
             android:textColor="@color/blue"
             android:layout_alignParentLeft="true" />
 
@@ -207,7 +209,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="주소"
+                android:text="비고"
                 android:textStyle="bold"
                 android:layout_weight="1"
                 android:background="@drawable/table_header_design"
