상세보기 버튼 구현

--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_detail.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_detail.xml
@@ -161,7 +161,7 @@
                 android:textColor="@color/blue" />
         </LinearLayout>
 
-        <ImageView
+        <ImageView android:id="@+id/car_imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
