--- a/OpenCVCameraExample3/app/src/main/res/drawable/detail_text.xml
+++ b/OpenCVCameraExample3/app/src/main/res/drawable/detail_text.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
 
             <solid
-                android:color="@color/back_yellow" />
+                android:color="@color/black" />
 
         </shape>
     </item>
-</selector>
+
+    <item android:right="1dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/yellow" />
+        </shape>
+    </item>
+
+
+</layer-list>
