--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_detail.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_detail.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
 
-        android:background="@drawable/edge_design"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:padding="1dp">
@@ -25,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="1dp">
@@ -55,7 +54,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:orientation="horizontal"
         android:padding="1dp">
 
@@ -81,10 +80,11 @@
             android:layout_margin="10dp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:orientation="horizontal"
         android:padding="1dp">
 
@@ -105,16 +105,16 @@
         <TextView
             android:id="@+id/txtPhoneNum"
             android:layout_width="100dp"
-            android:layout_margin="10dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_margin="10dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:orientation="horizontal"
         android:padding="1dp">
 
@@ -144,7 +144,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:orientation="horizontal"
         android:padding="1dp">
 
@@ -174,7 +174,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/edge_design"
+        android:background="@drawable/detail_edge"
         android:orientation="horizontal"
         android:padding="1dp">
 
