연락처 및 주소 입력시 숫자 키패드 적용

--- a/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
+++ b/OpenCVCameraExample3/app/src/main/res/layout/activity_main.xml
@@ -138,6 +138,7 @@
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:id="@+id/et_phone"
+                android:inputType="number"
                 android:hint="ex)01012345678"
                 android:backgroundTint="@color/yellow"/>
 
@@ -163,6 +164,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/et_dong"
+                android:inputType="number"
                 android:backgroundTint="@color/yellow"/>
 
             <TextView
@@ -177,6 +179,7 @@
                 android:hint="ex)1002"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:inputType="number"
                 android:id="@+id/et_ho"
                 android:backgroundTint="@color/yellow"/>
 
